--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,23 +1,15 @@
-/**
- * CSS files with the .module.css suffix will be treated as CSS modules
- * and scoped locally.
- */
-
-.heroBanner {
-  padding: 4rem 0;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-}
-
-@media screen and (max-width: 966px) {
-  .heroBanner {
-    padding: 2rem;
-  }
-}
-
-.buttons {
+.centro {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  height: 65vh;
+  margin: 6rem 0;
+}
+
+
+/*DESKTOP*/
+@media screen and (min-width: 1200px){
+ .centro {
+   margin: 0;
+ }
 }
